--- a/css/introduction-to-css/how-css-works/index.html
+++ b/css/introduction-to-css/how-css-works/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>My CSS experiment</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+</head>
   <body>
     <h1>Hello World!</h1>
     <p>This is my first CSS example</p>
