--- a/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
+++ b/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>Apply JavaScript example</title>
+      
   </head>
   <body>
-    <button>Click me</button>
+      <h1>JS Test Page</h1>
+    <button id="clickMe">Click me</button>
+      <button id="changeUser">Change User</button>
+      <script src="script.js"></script>
   </body>
 </html>
