--- a/html/multimedia-and-embedding/mdn-splash-page-start/index.html
+++ b/html/multimedia-and-embedding/mdn-splash-page-start/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -102,13 +102,13 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-
+        <img id="smallLogo" src="firefoxLogo120.png" />
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
-
+          <iframe width="400" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -119,16 +119,26 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="firefoxLogo400.png" alt="" srcset="firefoxLogo400.png 400w,
+                                                        firefoxLogo120.png 120w"
+                                               sizes="(max-width: 480px) 120px,
+                                                        400px" >
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="mozilla-dinosaur-head400.png" alt=""
+               srcset="mozilla-dinosaur-head400.png 400w,
+                        mozilla-dinosaur-120.png 120w"
+               sizes="(max-width: 480px) 120px,
+                        400px">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="firefox-addons.jpg" alt=""
+               srcset="firefox-addons120.jpg 120w,
+                        firefox-addons.jpg 400w"
+               sizes="(max-width: 480x) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="">
         </a>
         <div class="clearfix"></div>
       </div>
