CSS Type Setting Assessment

--- a/css/styling-text/typesetting-a-homepage-start/index.html
+++ b/css/styling-text/typesetting-a-homepage-start/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>St Huxley's Community College</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Karma" rel="stylesheet">
+      <link href="style.css" type="text/css" rel="stylesheet">
+
   </head>
   <body>
 
