--- a/css/introduction-to-css/fundamental-css-comprehension/index.html
+++ b/css/introduction-to-css/fundamental-css-comprehension/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Fundamental CSS comprehension</title>
+      <link rel="stylesheet" href="style-resources.css" />
   </head>
   <body>
 
