--- a/html/tables/assessment-start/blank-template.html
+++ b/html/tables/assessment-start/blank-template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,14 @@
   <body>
     <h1>Table template</h1>
 
+      <table>
+          <caption>
+              Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>.)
+          </caption>
+          <thead>
+              <th></th>
+          </thead>
+      </table>
 
   </body>
 </html>
