--- a/html/tables/basic/timetable.html
+++ b/html/tables/basic/timetable.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -33,6 +33,16 @@
     <h1>School timetable</h1>
 
     <table>
+        <colgroup>
+            <col />
+            <col />
+            <col style="background-color:#97DB9A" />
+            <col style="width 42px" />
+            <col style="background-color:#97DB9A" />
+            <col style="background-color:#DCC48E; border:4px solid #C1437A;" />
+            <col style="width 42px" />
+            <col style="width 42px" />
+        </colgroup>
       <tr>
         <td>&nbsp;</td>
         <th>Mon</th>
