Finished CSS tuts, did JS first splash

--- a/css/css-layout/flexbox/flex-align0.html
+++ b/css/css-layout/flexbox/flex-align0.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -26,7 +26,14 @@
       }
 
       /* Add your flexbox CSS below here */
-
+        div {
+					display: flex;
+          align-items: center;
+          justify-content: space-around;
+        }
+			button:first-child {
+				order: 1;
+			}
       
     </style>
   </head>
