--- a/css/css-layout/flexbox/flexbox0.html
+++ b/css/css-layout/flexbox/flexbox0.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -31,7 +31,15 @@
       }
 
       /* Add your flexbox CSS below here */
-
+      section {
+        display: flex;
+      }
+        article {
+        flex: 1 200px;
+      }
+      article:nth-of-type(3) {
+        flex: 2 200px;
+      }
 
       
     </style>
