--- a/css/css-layout/flexbox/flexbox-wrap0.html
+++ b/css/css-layout/flexbox/flexbox-wrap0.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -34,7 +34,7 @@
 
       section {
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
       }
 
       article {
