--- a/css/styling-boxes/cool-information-box-start/index.html
+++ b/css/styling-boxes/cool-information-box-start/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Cool box</title>
+      <link rel="stylesheet" href="style.css" />
     
   </head>
   <body>
