--- a/css/styling-boxes/letterheaded-paper-start/index.html
+++ b/css/styling-boxes/letterheaded-paper-start/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Fancy letterheaded paper</title>
-    
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
 
