--- a/javascript/introduction-to-js-1/assessment-start/index.html
+++ b/javascript/introduction-to-js-1/assessment-start/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -53,6 +53,6 @@
     <p class="story"></p>
     
 
-    
+    <script src="main.js"></script>
   </body>
 </html>
