Day 24,25,26: Functions, objects, bouncing balls

--- a/javascript/building-blocks/events/random-color-eventhandlerproperty.html
+++ b/javascript/building-blocks/events/random-color-eventhandlerproperty.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -23,7 +23,10 @@
         document.body.style.backgroundColor = rndCol;
       }
 
-      btn.onclick = bgChange;    
+			window.onkeydown = bgChange;   
+			window.onkeyup = bgChange;
+			btn.onmouseover = bgChange;
+			btn.onmouseout = bgChange;
     </script>
   </body>
 </html>
