--- a/javascript/building-blocks/functions/function-scope.html
+++ b/javascript/building-blocks/functions/function-scope.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -10,11 +10,13 @@
     var x = 1;
 
     function a() {
-      var y = 2;
+			var y = 2;
+			output(y);
     }
 
     function b() {
-      var z = 3;
+			var z = 3;
+			output(z);
     }
 
     function output(value) {
