--- a/javascript/building-blocks/functions/function-library.html
+++ b/javascript/building-blocks/functions/function-library.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,34 @@
   <script>
     var input = document.querySelector('.numberInput');
     var para = document.querySelector('p');
+
+		function squared(num) {
+			return num * num;
+		}
+
+		function cubed(num) {
+			return num * num * num;
+		}
+
+		function factorial(num) {
+			var x = num;
+			while (x > 1) {
+				num *= x - 1;
+				x--;
+			}
+			return num;
+		}
+
+		input.onchange = function() {
+			var num = input.value;
+			if (isNaN(num)) {
+				para.textContent = 'enter a number, man!';
+			} else {
+				para.textContent = num + ' squared is ' + squared(num) + '. ' +
+														num + ' cubed is ' + cubed(num) + '. ' +
+														num + ' factorial is ' + factorial(num) + '.'; 
+			}
+		}
 
   </script>
 </body>
