--- a/javascript/building-blocks/functions/function-start.html
+++ b/javascript/building-blocks/functions/function-start.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 200px;
+        width: 242px;
         background: #eee;
       }
 
@@ -17,6 +17,9 @@
         line-height: 1.5;
         padding: 10px 20px;
         color: #333;
+				padding-left: 82px;
+				background-position: 25px center;
+				background-repeat: no-repeat;
       }
 
       .msgBox button {
@@ -35,7 +38,39 @@
     <button>Display message box</button>
 
     <script>
-      
+			function displayMessage(msgText, msgType) {
+				var html = document.querySelector('html');
+
+				var panel = document.createElement('div');
+				panel.setAttribute('class', 'msgBox');
+				html.appendChild(panel);
+
+				var msg = document.createElement('p');
+				msg.textContent = msgText;
+				panel.appendChild(msg);
+
+				var closeBtn = document.createElement('button');
+				closeBtn.textContent = 'x';
+				panel.appendChild(closeBtn);
+
+				closeBtn.onclick = function () {
+					panel.parentNode.removeChild(panel);
+				}
+
+				if (msgType === 'warning') {
+					msg.style.backgroundImage = 'url(icons/warning.png)';
+					panel.style.backgroundColor = 'red';
+				} else if (msgType === 'chat') {
+					msg.style.backgroundImage = 'url(icons/chat.png)';
+					panel.style.backgroundColor = 'aqua';
+				} else {
+					msg.style.paddingLeft = '20px';
+				}
+			}
+			var btn = document.querySelector('button');
+			btn.onclick = function () {
+				displayMessage('Hey bud!!', 'chat');
+			}
     </script>
   </body>
 </html>
