--- a/javascript/oojs/advanced/oojs-class-inheritance-start.html
+++ b/javascript/oojs/advanced/oojs-class-inheritance-start.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -88,7 +88,41 @@
         alert(this.name.first + ' has left the building. Bye for now!');
       }
 
-      var person1 = new Person('Tammi', 'Smith', 17, 'female', ['music', 'skiing', 'kickboxing']);
+			var person1 = new Person('Tammi', 'Smith', 17, 'female', ['music', 'skiing', 'kickboxing']);
 
+			function Teacher(first, last, age, gender, interests, subject) {
+				Person.call(this, first, last, age, gender, interests);
+
+				this.subject = subject;
+			}
+			Teacher.prototype = Object.create(Person.prototype);
+			Teacher.prototype.constructor = Teacher;
+
+			Teacher.prototype.greeting = function () {
+				var prefix;
+
+				if (this.gender === 'male' || this.gender === 'Male' || this.gender === 'm' || this.gender === 'M') {
+					prefix = 'Mr.';
+				} else if (this.gender === 'female' || this.gender === 'Female' || this.gender === 'f' || this.gender === 'F') {
+					prefix = 'Mrs.';
+				} else {
+					prefix = 'Mx.';
+				}
+
+				alert('Hello. My name is ' + prefix + ' ' + this.name.last + ', and I teach ' + this.subject + '.');
+			};
+			var teacher1 = new Teacher('Dave', 'Griffiths', 31, 'male', ['football', 'cookery'], 'mathematics');
+
+			function Student(first, last, age, gender, interests) {
+				Person.call(this, first, last, age, gender, interests);
+			}
+			Student.prototype = Object.create(Person.prototype);
+			Student.prototype.constructor = Student;
+
+			Student.prototype.greeting = function () {
+				alert('School sucks and I only want to' + this.interests);
+			};
+
+			var student1 = new Student('billy', 'bob', 13, 'male', ['video games']);
     </script>
 </html>
