--- a/javascript/oojs/bouncing-balls/index.html
+++ b/javascript/oojs/bouncing-balls/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,7 @@
 
   <body>
     <h1>bouncing balls</h1>
+		<p>Ball Count: </p>
     <canvas></canvas>
 
     <script src="main.js"></script>
