--- a/javascript/apis/fetching-data/ajax-start.html
+++ b/javascript/apis/fetching-data/ajax-start.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -61,7 +61,31 @@
     </pre>
 
     <script>
+			var verseChoose = document.querySelector('select');
+			var poemDisplay = document.querySelector('pre');
 
+			verseChoose.onchange = function () {
+				var verse = verseChoose.value;
+				updateDisplay(verse);
+			};
+
+			function updateDisplay(verse) {
+				verse = verse.replace(' ', '');
+				verse = verse.toLowerCase();
+				var url = verse + '.txt';
+
+				var request = new XMLHttpRequest();
+				request.open('GET', url);
+				request.responseType = 'text';
+
+				request.onload = function () {
+					poemDisplay.textContent = request.response;
+					request.send();
+				}
+			};
+
+			updateDisplay('Verse 1');
+			verseChoose.value = 'Value 1';
     </script>
   </body>
 </html>
