--- a/javascript/apis/fetching-data/ajax-start.html
+++ b/javascript/apis/fetching-data/ajax-start.html
@@ -70,18 +70,25 @@
 			};
 
 			function updateDisplay(verse) {
-				verse = verse.replace(' ', '');
+				verse = verse.replace(" ", "");
 				verse = verse.toLowerCase();
 				var url = verse + '.txt';
 
-				var request = new XMLHttpRequest();
-				request.open('GET', url);
-				request.responseType = 'text';
+				fetch(url).then(function(response) {
+					response.text().then(function (text) {
+						poemDisplay.textContent = text;
+					});
+				});
 
-				request.onload = function () {
-					poemDisplay.textContent = request.response;
-					request.send();
-				}
+				//var request = new XMLHttpRequest();
+				//request.open('GET', url);
+				//request.responseType = 'text';
+
+				//request.onload = function () {
+				//	poemDisplay.textContent = request.response;
+					
+				//};
+				//request.send();
 			};
 
 			updateDisplay('Verse 1');
