--- a/javascript/apis/third-party-apis/google-maps/maps_start.html
+++ b/javascript/apis/third-party-apis/google-maps/maps_start.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Google Maps example customized</title>
 
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=INSERT-YOUR-API-KEY-HERE"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyCLj93UqtHlSCISXB1XhCz1PWWBFcwZbkI"></script>
     <script>
     if("geolocation" in navigator) {
 
@@ -16,9 +16,24 @@
           center: latlng,
           mapTypeId: google.maps.MapTypeId.TERRAIN,
           disableDefaultUI: true
-        }
+				}
+				var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
         var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+				var marker = new google.maps.Marker({
+					position: latlng,
+					icon: iconBase + 'flag_maps.png',
+					map: map
+				});
 
+				var contentString = '<div id="content"><h2 id="firstHeading" class="firstHeading">Custom info window</h2><p>This is a cool custom info window.</p></div>';
+
+				var infowindow = new google.maps.InfoWindow({
+					content: contentString
+				});
+
+				marker.addListener('click', function () {
+					infowindow.open(map, marker);
+				});
       });
 
     } else {
