--- a/javascript/apis/third-party-apis/nytimes/nytimes_start.html
+++ b/javascript/apis/third-party-apis/nytimes/nytimes_start.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -47,7 +47,7 @@
       // Defining a baseURL and key to as part of the request URL
 
       var baseURL = 'https://api.nytimes.com/svc/search/v2/articlesearch.json';
-      var key = 'INSERT-YOUR-API-KEY-HERE';
+			var key = 'fea6d97368d2440f81121ee4333e38c4';
       var url;
 
       // Grab references to all the DOM elements you'll need to manipulate
@@ -72,6 +72,106 @@
       var displayNav = false;
 
       // Event listeners to control the functionality
+			searchForm.addEventListener('submit', fetchResults);
+			nextBtn.addEventListener('click', nextPage);
+			previousBtn.addEventListener('click', previousPage);
+
+			function fetchResults(e) {
+				e.preventDefault();
+
+				url = baseURL + '?api-key=' + key + '&page=' + pageNumber + '&q=' + searchTerm.value;
+
+				if (startDate.value !== '') {
+					url += '&begin_date=' + startDate.value;
+				};
+
+				if (endDate.value !== '') {
+					url += '&end_date=' + endDate.value;
+				};
+
+				fetch(url).then(function (result) {
+					return result.json();
+				}).then(function (json) {
+					displayResults(json);
+				});
+			}
+
+			function displayResults(json) {
+				while (section.firstChild) {
+					section.removeChild(section.firstChild);
+				}
+
+				var articles = json.response.docs;
+
+				if (articles.length === 10) {
+					nav.style.display = 'block';
+				} else {
+					nav.style.display = 'none';
+				}
+
+				if (articles.length === 0) {
+					var para = document.createElement('p');
+					para.textContent = 'No results returned.'
+					section.appendChild(para);
+				} else {
+					for (var i = 0; i < articles.length; i++) {
+						var article = document.createElement('article');
+						var heading = document.createElement('h2');
+						var link = document.createElement('a');
+						var img = document.createElement('img');
+						var para1 = document.createElement('p');
+						var para2 = document.createElement('p');
+						var clearfix = document.createElement('div');
+
+						var current = articles[i];
+						console.log(current);
+
+						link.href = current.web_url;
+						link.textContent = current.headline.main;
+						para1.textContent = current.lead_paragraph;
+						para2.textContent = 'Keywords: ';
+						for (var j = 0; j < current.keywords.length; j++) {
+							var span = document.createElement('span');
+							span.textContent += current.keywords[j].value + ' ';
+							para2.appendChild(span);
+						}
+
+						if (current.multimedia.length > 0) {
+							img.src = 'http://www.nytimes.com/' + current.multimedia[0].url;
+							img.alt = current.headline.main;
+						}
+
+						clearfix.setAttribute('class', 'clearfix');
+
+						article.appendChild(heading);
+						heading.appendChild(link);
+						article.appendChild(img);
+						article.appendChild(para1);
+						article.appendChild(para2);
+						article.appendChild(clearfix);
+						section.appendChild(article);
+					}
+				}
+			};
+
+			function nextPage(e) {
+				pageNumber++;
+				fetchResults(e);
+			};
+
+			function nextPage(e) {
+				pageNumber++;
+				fetchResults(e);
+			};
+
+			function previousPage(e) {
+				if (pageNumber > 0) {
+					pageNumber--;
+				} else {
+					return;
+				}
+				fetchResults(e);
+			};
 
 
     </script>
