Day 33: JS Canvas Tuts

--- a/javascript/apis/third-party-apis/youtube/index.html
+++ b/javascript/apis/third-party-apis/youtube/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -66,7 +66,7 @@
         // 8. Click the "Public data" radio button
         // 9. Click the "What credentials do I need?" button
         // 10. Copy your API key and paste it in below
-        gapi.client.setApiKey('AIzaSyB6B_1tjwrSuM_NYS2HbqINbaapkEi2ThA');
+				gapi.client.setApiKey('AIzaSyCLj93UqtHlSCISXB1XhCz1PWWBFcwZbkI');
 
         // Attach an event listener to the form so that a search is carried out
         // when it is submitted — the search() function
