--- a/html/forms/form-validation/fruit-start.html
+++ b/html/forms/form-validation/fruit-start.html
@@ -17,9 +17,17 @@
 
 <body>
     <form>
-      <label for="choose">Would you prefer a banana or a cherry?</label>
-      <input id="choose" name="i_like">
-      <button>Submit</button>
+      <div>
+        <label for="choose">Would you prefer a banana or a cherry?</label>
+        <input id="choose" name="i_like" required minlength="6" maxlength="6">
+      </div>
+      <div>
+        <label for="number">How many would you like?</label>
+        <input type="number" name="amount" id="number" value="1" min="1" max="10">
+      </div>
+      <div>
+        <button>Submit</button>
+      </div>
     </form>
 </body>
 
